# Checkmate-Escrow

./: Cargo.toml  TODO.md  environments.toml
.github/ISSUE_TEMPLATE/: bug_report.md  docs_work.md  feature_request.md  testing_work.md
contracts/escrow/src/: errors.rs  lib.rs  types.rs
contracts/escrow/src/tests/: admin.rs  index.rs  invariants.rs  lifecycle.rs  mod.rs  snapshots.rs  token_allowlist.rs
contracts/oracle/src/: lib.rs  tests.rs
docs/: EVENT_INDEXER_API.md  deployment.md  faq.md  oracle.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/admin/: ConfirmDialog.tsx
frontend/src/components/match/: CreateMatchForm.tsx  DepositButton.tsx  MatchCard.tsx  MatchStatusBadge.tsx
frontend/src/components/wallet/: WalletConnector.tsx
frontend/src/hooks/: useAdminContract.ts
frontend/src/pages/: AdminPanel.tsx
frontend/src/test/: match.test.tsx  useBalance.test.ts
oracle-service/: Cargo.toml
oracle-service/src/oracle/: chess_com_client.rs  errors.rs  mod.rs
oracle-service/tests/: chess_com_client_integration.rs  chess_com_client_unit.rs
services/event-indexer/: Cargo.toml  README.md
services/event-indexer/src/: api.rs  cache.rs  config.rs  db.rs  main.rs  models.rs  rpc.rs
services/event-indexer/tests/: integration_tests.rs
