[package]
name = "oracle-service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


# Optional: used only if/when you wire to Soroban for submissions.
soroban-sdk = { version = "21.7.5", default-features = false, features = [] }
contracts-oracle = { package = "oracle", path = "../contracts/oracle" }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
